test/fail/adt_type_infer02.v3
//@seman
type A<T> {
	case B(x: T);
	case C(x: int);
}
def m(a: A<bool>) -> int {
	match (a) {
		x: A.B => return 0; // error: A unqualified (should unify)
		x: A.C => return 1;
	}
	return 2;
}
